--- a/app/src/main/res/drawable/bgbutton.xml
+++ b/app/src/main/res/drawable/bgbutton.xml
@@ -3,22 +3,22 @@
     <item android:state_pressed="true">
         <shape>
             <shape>
-                <solid android:color="#1a7a1a" /> <!-- Màu nền mặc định -->
+                <solid android:color="#338E7F" /> <!-- Màu nền mặc định -->
                 <corners android:radius="10dp" /> <!-- Độ bo tròn góc -->
                 <stroke
                     android:width="0.5dp"
-                    android:color="#1a7a1a" /> <!-- Màu và độ dày của viền mặc định -->
+                    android:color="#338E7F" /> <!-- Màu và độ dày của viền mặc định -->
             </shape>
         </shape>
     </item>
     <!-- Trạng thái mặc định -->
     <item>
         <shape>
-            <solid android:color="#1a7a1a" /> <!-- Màu nền mặc định -->
+            <solid android:color="#7695DC" /> <!-- Màu nền mặc định -->
             <corners android:radius="10dp" /> <!-- Độ bo tròn góc -->
             <stroke
                 android:width="0.5dp"
-                android:color="#1a7a1a" /> <!-- Màu và độ dày của viền mặc định -->
+                android:color="#7695DC" /> <!-- Màu và độ dày của viền mặc định -->
         </shape>
     </item>
 </selector>
