--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="125dp"
         app:cardCornerRadius="28dp"
-        app:cardBackgroundColor="#e6b3ff"
+        app:cardBackgroundColor="#4FDBC3"
         android:layout_marginTop="-20dp">
 
         <TextView
@@ -50,17 +50,21 @@
                 android:scaleType="fitXY"
                 android:src="@drawable/vongtronavatar"
                 tools:ignore="MissingConstraints" />
+
             <ImageView
                 android:id="@+id/avatar"
-                android:layout_width="118dp"
-                android:layout_height="105dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
                 android:src="@drawable/meme"
                 app:layout_constraintBottom_toBottomOf="@+id/vontron"
                 app:layout_constraintEnd_toEndOf="@+id/vontron"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/vontron"
-                app:layout_constraintTop_toTopOf="@+id/vontron" />
+                app:layout_constraintTop_toTopOf="@+id/vontron"
+                app:layout_constraintVertical_bias="0.0" />
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
