--- a/app/src/main/res/layout/activity_direct_road.xml
+++ b/app/src/main/res/layout/activity_direct_road.xml
@@ -13,7 +13,7 @@ tools:context=".MapFragment">
     android:layout_width="match_parent"
     android:layout_height="250dp"
     app:cardCornerRadius="28dp"
-    app:cardBackgroundColor="#1a7a1a"
+    app:cardBackgroundColor="#4FDBC3"
     android:layout_marginTop="-20dp">
     <LinearLayout
         android:id="@+id/search_container"
@@ -22,7 +22,7 @@ tools:context=".MapFragment">
         android:orientation="horizontal"
         android:layout_marginTop="60dp"
         android:paddingHorizontal="15dp"
-        android:background="#1a7a1a">
+        android:background="#4FDBC3">
         <EditText
             android:id="@+id/location_search"
             android:layout_width="0dp"
@@ -49,7 +49,7 @@ tools:context=".MapFragment">
         android:orientation="horizontal"
         android:layout_marginTop="150dp"
         android:paddingHorizontal="15dp"
-        android:background="#1a7a1a">
+        android:background="#4FDBC3">
         <EditText
             android:id="@+id/destination_search"
             android:layout_width="0dp"
