--- a/app/src/main/res/drawable/bg_only_rounded.xml
+++ b/app/src/main/res/drawable/bg_only_rounded.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#1a7a1a" /> <!-- Màu nền của TextView -->
+    <solid android:color="#4FDBC3" /> <!-- Màu nền của TextView -->
 
     <corners
         android:bottomLeftRadius="20dp"
