--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeFragment"
-    android:background="#1a7a1a">
+    android:background="#4FDBC3">
 
     <LinearLayout
         android:id="@+id/contentWrapper"
@@ -84,7 +84,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="5dp"
-                                android:text="potholes detected"
+                                android:text="Số lượng pothole đã phát hiện"
                                 android:textColor="#ABADBF"
                                 android:textSize="14sp" />
                         </LinearLayout>
@@ -117,14 +117,14 @@
                 app:layout_constraintTop_toBottomOf="@id/statsContainer">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="1dp"
+                    android:layout_height="1dp"
                     android:orientation="vertical"
-                    android:padding="16dp">
+                    android:padding="1dp">
 
                     <!-- Horizontal LinearLayout for EditText and Button in the same row -->
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="1dp"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
@@ -184,9 +184,9 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/chartsection"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
-                app:cardCornerRadius="15dp"
-                android:layout_marginTop="20dp"
+                android:layout_height="1dp"
+                app:cardCornerRadius="1dp"
+                android:layout_marginTop="1222dp"
                 app:layout_constraintTop_toBottomOf="@+id/weatherSection"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
@@ -195,7 +195,7 @@
 
                 <ScrollView
                     android:layout_width="200dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="1dp"
                     android:background="#f5f5f5">
                     <TextView
                         android:id="@+id/multiLineTextView"
