--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="90dp"
             app:cardCornerRadius="15dp"
-            app:cardBackgroundColor="#1a7a1a"
+            app:cardBackgroundColor="#4FDBC3"
             android:layout_marginTop="-10dp">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -48,7 +48,7 @@
                     android:layout_height="38dp"
                     android:layout_weight="1"
                     android:background="@drawable/for_frame_search"
-                    android:hint="Enter location" />
+                    android:hint="Nhập địa điểm" />
 
                 <Button
                     android:id="@+id/search_button"
@@ -56,7 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_marginStart="5dp"
                     android:layout_height="39dp"
-                    android:text="Search" />
+                    android:text="Tìm kiếm" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
