--- a/app/src/main/res/layout/pothethonlist.xml
+++ b/app/src/main/res/layout/pothethonlist.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="15dp"
-    android:background="#1a7a1a">
+    android:background="#4FDBC3">
 
     <!-- Header chào tên username -->
     <TextView
@@ -55,7 +55,7 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:text="DISTANCE"
+                            android:text="Quãng đường"
                             android:textColor="#282323"
                             android:gravity="center"
                             android:textSize="18sp"
@@ -78,7 +78,7 @@
                                 android:background="@drawable/rounded_background"
                                 android:lineSpacingExtra="4dp"
                                 android:padding="10dp"
-                                android:text="Pothole detected:"
+                                android:text="Số lượng pothole:"
                                 android:textColor="#333"
                                 android:textSize="18sp" />
                         </ScrollView>
@@ -106,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:padding="8dp"
-                android:text="Severity level"
+                android:text="Mức độ nghiêm trọng"
                 android:textStyle="bold"
                 android:textColor="#662c1b"
                 android:textSize="24sp" />
@@ -120,8 +120,9 @@
                 <TextView
                     android:layout_width="100dp"
                     android:layout_height="40dp"
-                    android:background="#ffcc00"
-                    android:text="Light"
+                    android:background="#DBCD7A"
+                    android:text="Nhẹ"
+                    android:textStyle="bold"
                     android:layout_weight="1"
                     android:layout_marginEnd="10dp"
                     android:gravity="center" />
@@ -129,16 +130,18 @@
                 <TextView
                     android:layout_width="100dp"
                     android:layout_height="40dp"
-                    android:background="#f89b28"
-                    android:text="Medium"
+                    android:background="#DB882D"
+                    android:text="Vừa"
+                    android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center" />
 
                 <TextView
                     android:layout_width="100dp"
                     android:layout_height="40dp"
-                    android:background="#ff7973"
-                    android:text="Hard"
+                    android:background="#DB211C"
+                    android:text="Nặng"
+                    android:textStyle="bold"
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     android:gravity="center" />
