--- a/app/src/main/res/layout/distance.xml
+++ b/app/src/main/res/layout/distance.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/distance_value"
             android:layout_centerHorizontal="true"
-            android:text="TODAY KM"
+            android:text="TRAVEL DISTENCE"
             android:textColor="#00E5FF"
             android:textSize="16sp"/>
     </RelativeLayout>
