--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -19,7 +19,7 @@
             android:gravity="center">
             <ImageView
                 android:layout_marginTop="30dp"
-                android:layout_width="wrap_content"
+                android:layout_width="1dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/hinhlogolon"
                 android:scaleType="fitXY"
