--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -11,35 +11,40 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="50dp"
         android:orientation="vertical">
-        <LinearLayout
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:gravity="center">-->
+<!--            <ImageView-->
+<!--                android:layout_marginTop="30dp"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/hinhlogolon"-->
+<!--                android:scaleType="fitXY"-->
+<!--                android:adjustViewBounds="true"/>-->
+<!--        </LinearLayout>-->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_top"
+            android:layout_alignParentTop="true"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
-            <ImageView
-                android:layout_marginTop="30dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/hinhlogolon"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="125dp"
+            app:cardCornerRadius="28dp"
+            app:cardBackgroundColor="#4FDBC3"
+            android:layout_marginTop="-20dp">
+
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Forgot Password?"
-                android:textSize="25dp"
-                android:textStyle="bold"
+                android:textAlignment="center"
+                android:layout_gravity="bottom"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp"
                 android:fontFamily="sans-serif-medium"
-                android:layout_weight="0.3"
-                android:textColor="#000000"/>
-        </LinearLayout>
+                android:layout_marginBottom="15dp"
+                android:text="Forgot password"/>
+        </androidx.cardview.widget.CardView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -81,10 +86,11 @@
                 android:fontFamily="sans-serif-medium"
                 android:textColor="@color/white"
                 android:background="@drawable/bgbutton"/>
+
             <Space
-                android:layout_width="match_parent"
+                android:layout_width="137dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
             <Button
                 android:id="@+id/btn_continue"
                 android:layout_width="125dp"
