--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -13,8 +13,7 @@
         android:id="@+id/uit"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter"
-        android:src="@drawable/uit" />
+        android:scaleType="fitCenter" />
   </RelativeLayout>
   <ProgressBar
       android:id="@+id/progress_bar"
