--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="300dp"
             android:orientation="vertical"
             android:padding="28dp">
 <!--========================================================================-->
@@ -179,6 +179,7 @@
                     android:layout_marginTop="40dp"
                     android:drawableStart="@drawable/add_user"
                     android:fontFamily="sans-serif-medium"/>
+
                 <TextView
                     android:id="@+id/txt_logout"
                     android:layout_width="match_parent"
